Adding serverless.sh and serverless_remove.sh, also updating serverless.yml to contain latest plugin for layers

--- a/serverless.yml
+++ b/serverless.yml
@@ -48,3 +48,6 @@ functions:
       config_suffix: _config.json
       survey_arn_prefix: :ES-
       survey_arn_suffix: -Results
+
+plugins:
+  - serverless-latest-layer-version
