--- a/serverless.yml
+++ b/serverless.yml
@@ -2,6 +2,8 @@
 service: es-config-loader
 provider:
   name: aws
+  deploymentBucket:
+    name: spp-results-sandbox-serverless
   role: arn:aws:iam::${self:custom.accountId}:role/lambda_invoke_lambda
   vpc:
     securityGroupIds:
@@ -31,10 +33,13 @@ functions:
         - config_loader.py
       exclude:
         - ./**
+    layers:
+      - arn:aws:lambda:eu-west-2:${self:custom.accountId}:layer:es_python_layer:latest
+      - arn:aws:lambda:eu-west-2:${self:custom.accountId}:layer:dev-es-common-functions:latest
     tags:
       app: results
     environment:
-      bucket_name: results-s3-bucket
+      bucket_name: spp-results-sandbox
       step_function_arn: arn:aws:states:eu-west-2:${self:custom.accountId}:stateMachine
       file_path: configs/
       payload_reference_name: survey
