--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@ service: es-config-loader
 provider:
   name: aws
   deploymentBucket:
-    name: spp-results-sandbox-serverless
+    name: spp-results-${self:custom.environment}-serverless
   role: arn:aws:iam::#{AWS::AccountId}:role/lambda_invoke_lambda
   vpc:
     securityGroupIds:
@@ -21,7 +21,7 @@ provider:
     individually: true
 
 custom:
-  accountId: #{AWS::AccountId}
+  environment: ${env:ENVIRONMENT}
 
 functions:
   deploy-config-loader:
@@ -39,7 +39,7 @@ functions:
     tags:
       app: results
     environment:
-      bucket_name: spp-results-sandbox
+      bucket_name: spp-results-${self:custom.environment}
       step_function_arn: arn:aws:states:eu-west-2:#{AWS::AccountId}:stateMachine
       file_path: configs/
       payload_reference_name: survey
